--- a/buttons.html
+++ b/buttons.html
@@ -8,6 +8,15 @@
     border-radius: 3px;
     cursor: pointer;
     margin-right: 8px;
+    transition: opacity 0.15s;
+  }
+
+  .subscribe-button:hover{
+    opacity: 0.7
+  }
+
+  .subscribe-button:active{
+    opacity: 0.45
   }
 
   .join-button {
@@ -21,6 +30,17 @@
     color: rgb(16, 140, 235);
     cursor: pointer;
     margin-right: 8px;
+    transition: background-color 0.40s,
+      color 0.40s;
+  }
+
+  .join-button:hover{
+    background-color: rgb(16, 140, 235);
+    color: white;
+  }
+
+  .join-button:active{
+    opacity: 0.7;
   }
 
   .tweet-button{
@@ -34,6 +54,11 @@
     font-size: 14px;
     cursor: pointer;
     margin-right: 8px;
+    transition: box-shadow 0.25s;
+  }
+
+  .tweet-button:hover{
+    box-shadow:3px 3px 8px rgba(0, 0, 0, 0.20);
   }
 </style>
 
