--- a/lesson2.html
+++ b/lesson2.html
@@ -6,6 +6,11 @@
     width: 112px;
     margin-right: 8px;
     cursor: pointer;
+    transition: opacity 0.25s;
+  }
+
+  .Uber-button:hover{
+    opacity: 0.70;
   }
 
   .Amazon1-button{
@@ -18,6 +23,11 @@
     margin-right: 8px;
     font-size: 15px;
     cursor: pointer;
+    transition: background-color 0.20s;
+  }
+
+  .Amazon1-button:active{
+    opacity: 0.60;
   }
 
   .Amazon2-button{
@@ -30,6 +40,18 @@
     margin-right: 8px;
     font-size: 15px;
     cursor: pointer;
+    transition: background-color 0.20s;
+  }
+
+  .Amazon2-button:active{
+    opacity: 0.60;
+  }
+
+  .Amazon1-button:hover{
+    background-color: rgb(238, 202, 18);
+  }
+  .Amazon2-button:hover{
+    background-color: rgb(234, 149, 21);
   }
 
   .github-button{
@@ -45,6 +67,10 @@
     cursor: pointer;
   }
 
+  .github-button:hover{
+    box-shadow: 1px 4px 4px rgba(0, 0, 0, 0.17);
+  }
+
   .bootstrap1-button{
     background-color: rgb(121,82,179);
     color: rgb(255,255,255);
@@ -56,6 +82,10 @@
     font-size: 13px;
     font-weight: bold;
     cursor: pointer;
+    transition: background-color 0.20s;
+  }
+  .bootstrap1-button:hover{
+    background-color: rgb(112, 76, 167);
   }
   .bootstrap2-button{
     background-color: white;
@@ -69,10 +99,55 @@
     font-size: 13px;
     font-weight: bold;
     cursor: pointer;
+    transition: background-color 0.20s, color 0.20s;
+  }
+  .bootstrap2-button:hover{
+    background-color: rgb(108,117,125);
+    color : white;
   }
 
+  .linkedin-button1{
+    background-color: rgb(17, 137, 235);
+    color: rgb(255, 255, 255);
+    height: 34px;
+    width: 230px;
+    border: none;
+    border-radius: 17px;
+    margin-right: 8px;
+    font-size: 14px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.20s;
+  }
+
+  .linkedin-button1:hover{
+    background-color: rgb(18, 120, 204);
+  }
+
+  .linkedin-button2{
+    background-color: white;
+    color: rgb(17, 137, 235);
+    border-color: rgb(17, 137, 235);
+    border-style: solid;
+    border-radius: 17px;
+    height: 34px;
+    width: 60px;
+    margin-right: 8px;
+    font-weight: bold;
+    border-width: 1px;
+    cursor: pointer;
+    transition: background-color 0.20s;
+  }
+
+  .linkedin-button2:hover{
+    background-color: rgb(214, 232, 248);
+    border-width: 2px;
+  }
   .amazon-link{
     color: rgb(0,113,133);
+  }
+  .amazon-link:hover{
+    color: rgb(189, 99, 9);
   }
 
   .item-title{
@@ -104,6 +179,14 @@
 
 <button class="bootstrap2-button">
   Download
+</button>
+
+<button class="linkedin-button1">
+  Apply on company website
+</button>
+
+<button class="linkedin-button2">
+  Save
 </button>
 
 <p>
